# PythonBridge

./: .gitignore  CMakeLists.txt  PythonBridge.Build.cs  QtPythonBridge.Build.cs  QtPythonBridge_global.h  README.md  library.cpp  library.h  qtpythonbridge.cpp  qtpythonbridge.h
